# Vulkan-Renderer

./: .gitignore  CMakeLists.txt  README.md
include/: Utils.hpp  pch.hpp
include/Renderer/: Renderer-Exceptions.hpp  Renderer.hpp
include/Renderer/Buffer/: Buffer.hpp  BufferDescription.hpp
include/Renderer/Pipeline/: Pipeline.hpp  PipelineDescription.hpp
include/Renderer/Rasterizer/: Rasterizer.hpp
include/Renderer/RenderGraph/: ImageResource.hpp  RenderGraph.hpp  RenderPass.hpp
include/Renderer/Shader/: Shader.hpp
include/Renderer/Vertex/: VertexInfo.hpp
src/: Utils.cpp  main.cpp
src/Renderer/: Renderer-Allocator.cpp  Renderer-CommandBuffers.cpp  Renderer-Debugger.cpp  Renderer-Instance.cpp  Renderer-LogicalDevice.cpp  Renderer-PhysicalDevice.cpp  Renderer-PipelineDescription.cpp  Renderer-RenderGraph.cpp  Renderer-Renderer.cpp  Renderer-Surface.cpp  Renderer-SwapChain.cpp  Renderer-core.cpp
src/Renderer/Buffer/: Buffer.cpp
src/vmaImplementation/: vma.cpp
